# counter-server

./: Cargo.toml  LICENSE  README.md
assets/css/: common.css  theme-material.css  theme-neomorphism.css
src/: errors.rs  handlers.rs  main.rs  model.rs  prelude.rs  templates.rs
src/handlers/: counter.rs  index.rs  mod.rs
src/templates/: counter.rs
templates/: counter.html  index.html
