[package]
name = "counter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "*"
askama_axum = "*"
axum = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
tower = { version = "*", features = ["full"] }
tower-http = { version = "*", features = ["full"] }

[dev-dependencies]
anyhow = "*"
